--- a/generate_sequence_features.ipynb
+++ b/generate_sequence_features.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = 'data/signals.gz'\n",
+    "file_path = 'sequence_label_data/signals.gz'\n",
     "with gzip.open(file_path, 'rt') as file:\n",
     "    signal_df = pd.read_csv(file)\n",
     "\n",
@@ -32,13 +32,7 @@
    "source": [
     "def get_feature(sequence):\n",
     "    # Descriptive statistics\n",
-    "    mean_value = sequence['logratio'].mean()\n",
-    "    median_value = sequence['logratio'].median()\n",
     "    std_deviation = sequence['logratio'].std()\n",
-    "\n",
-    "    # Percentiles\n",
-    "    percentile_25 = sequence['logratio'].quantile(0.25)\n",
-    "    percentile_75 = sequence['logratio'].quantile(0.75)\n",
     "\n",
     "    # Other statistics\n",
     "    min_value = sequence['logratio'].min()\n",
@@ -46,13 +40,13 @@
     "    range_value = max_value - min_value\n",
     "\n",
     "    # Skewness and Kurtosis\n",
-    "    skewness = sequence['logratio'].skew()\n",
-    "    kurtosis = sequence['logratio'].kurt()\n",
+    "    abs_skewness = abs(sequence['logratio'].skew())\n",
+    "    kurtosis     = sequence['logratio'].kurt()\n",
     "\n",
     "    # Count and unique values\n",
     "    count = sequence['logratio'].count()\n",
     "\n",
-    "    return np.array([mean_value, median_value, std_deviation, percentile_25, percentile_75, range_value, skewness, kurtosis, count/1000])\n"
+    "    return np.array([std_deviation, range_value, abs_skewness, kurtosis, count])\n"
    ]
   },
   {
@@ -66,17 +60,17 @@
     "    sequence = seqs[i][1]\n",
     "    array_rows.append(np.append(int(i), get_feature(sequence)))\n",
     "\n",
-    "column_names = [\"seqID\", \"mean_value\", \"median_value\", \"std_deviation\", \"percentile_25\", \"percentile_75\", \"range_value\", \"skewness\", \"kurtosis\", \"count\"]\n",
+    "column_names = [\"seqID\", \"std_deviation\", \"range_value\", \"abs_skewness\", \"kurtosis\", \"count\"]\n",
     "df = pd.DataFrame(array_rows, columns=column_names)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('data/seq_stat.csv', index=False)"
+    "df.to_csv('learning_data/seq_features.csv', index=False)"
    ]
   }
  ],
