--- a/generate_sequence_features.ipynb
+++ b/generate_sequence_features.ipynb
@@ -31,6 +31,13 @@
    "outputs": [],
    "source": [
     "def get_feature(sequence):\n",
+    "    # sequence difference\n",
+    "    n = 10\n",
+    "    feature_diff = np.zeros(n)\n",
+    "    for j in range(n):\n",
+    "        diff = np.abs(sequence['logratio'].to_numpy()[1:] - sequence['logratio'].to_numpy()[:-1])\n",
+    "        feature_diff[j] = np.sum(diff > (j+1)*0.1)\n",
+    "    \n",
     "    # Descriptive statistics\n",
     "    std_deviation = sequence['logratio'].std()\n",
     "\n",
@@ -46,7 +53,7 @@
     "    # Count and unique values\n",
     "    count = sequence['logratio'].count()\n",
     "\n",
-    "    return np.array([std_deviation, range_value, abs_skewness, kurtosis, count])\n"
+    "    return np.append(np.array([std_deviation, range_value, abs_skewness, kurtosis, count]), feature_diff)"
    ]
   },
   {
@@ -61,7 +68,8 @@
     "    array_rows.append(np.append(int(i), get_feature(sequence)))\n",
     "\n",
     "column_names = [\"seqID\", \"std_deviation\", \"range_value\", \"abs_skewness\", \"kurtosis\", \"count\"]\n",
-    "df = pd.DataFrame(array_rows, columns=column_names)"
+    "column_diff_name = [\"0.1\", \"0.2\", \"0.3\", \"0.4\", \"0.5\", \"0.6\", \"0.7\", \"0.8\", \"0.9\", \"1.0\"]\n",
+    "df = pd.DataFrame(array_rows, columns=column_names+column_diff_name)"
    ]
   },
   {
