--- a/study_new_seq_feature.ipynb
+++ b/study_new_seq_feature.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean:  0.50, sd:  0.50, sum: 50.00, per_25:  1.00, sum_diff:  99.00\n",
+      "mean:  0.50, sd:  0.50, sum: 50.00, per_25:  1.00, sum_diff:   3.00\n",
+      "mean:  0.50, sd:  0.50, sum: 50.00, per_25:  1.00, sum_diff:   1.00\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import numpy as np\n",
+    "\n",
     "def calculate_statistics(sequence):\n",
     "    sum_of_diff = np.sum(np.abs(sequence[1:] - sequence[:-1]))\n",
     "    statistics = {\n",
@@ -24,36 +27,19 @@
     "        'percentile_75': np.percentile(sequence, 75),\n",
     "        'sum_diff':      sum_of_diff\n",
     "    }\n",
-    "    return statistics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mean:  5.00, sd:  5.00, sum: 500.00, per_25: 10.00, sum_diff: 990.00\n",
-      "mean:  5.00, sd:  5.00, sum: 500.00, per_25: 10.00, sum_diff:  30.00\n",
-      "mean:  5.00, sd:  5.00, sum: 500.00, per_25: 10.00, sum_diff:  10.00\n"
-     ]
-    }
-   ],
-   "source": [
+    "    return statistics\n",
+    "\n",
     "sequence  = np.zeros(100)\n",
     "big_val   = 1\n",
     "small_val = 0\n",
     "step_list = [1, 25, 50]\n",
     "for step in step_list:\n",
     "    for i in range(int(len(sequence)/2/step)):\n",
-    "        sequence[2*i*step: (2*i+1)*step]     = j*big_val\n",
-    "        sequence[(2*i+1)*step: (2*i+2)*step] = j*small_val\n",
+    "        sequence[2*i*step: (2*i+1)*step]     = big_val\n",
+    "        sequence[(2*i+1)*step: (2*i+2)*step] = small_val\n",
     "    stat = calculate_statistics(sequence)\n",
     "    print(\"mean: %5.2f, sd: %5.2f, sum: %5.2f, per_25: %5.2f, sum_diff: %6.2f\"\n",
-    "            % (stat['mean'], stat['std_deviation'], stat['sum'], stat['percentile_25'], stat['sum_diff']))"
+    "            % (stat['mean'], stat['std_deviation'], stat['sum'], stat['percentile_75'], stat['sum_diff']))"
    ]
   }
  ],
