--- a/generate_sequence_features.ipynb
+++ b/generate_sequence_features.ipynb
@@ -41,6 +41,7 @@
     "    \n",
     "    # Descriptive statistics\n",
     "    std_deviation = sequence['logratio'].std()\n",
+    "    mean = sequence['logratio'].mean()\n",
     "\n",
     "    # Other statistics\n",
     "    min_value = sequence['logratio'].min()\n",
@@ -54,7 +55,7 @@
     "    # Count and unique values\n",
     "    count = sequence['logratio'].count()\n",
     "\n",
-    "    return np.append(np.array([std_deviation, range_value, abs_skewness, kurtosis, count, sum_diff]), feature_diff)"
+    "    return np.append(np.array([std_deviation, mean, range_value, abs_skewness, kurtosis, count, sum_diff]), feature_diff)"
    ]
   },
   {
@@ -68,7 +69,7 @@
     "    sequence = seqs[i][1]\n",
     "    array_rows.append(np.append(int(i), get_feature(sequence)))\n",
     "\n",
-    "column_names = [\"seqID\", \"std_deviation\", \"range_value\", \"abs_skewness\", \"kurtosis\", \"count\"]\n",
+    "column_names = [\"seqID\", \"std_deviation\", \"mean\", \"range_value\", \"abs_skewness\", \"kurtosis\", \"count\"]\n",
     "column_diff_name = [\"sum_diff\", \"0.1\", \"0.2\", \"0.3\", \"0.4\", \"0.5\", \"0.6\", \"0.7\", \"0.8\", \"0.9\", \"1.0\"]\n",
     "df = pd.DataFrame(array_rows, columns=column_names+column_diff_name)"
    ]
