--- a/1_genome/lambda_learning_DeepLearning.ipynb
+++ b/1_genome/lambda_learning_DeepLearning.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1ad7e2afcf0>"
+       "<torch._C.Generator at 0x1a5fbcafcf0>"
       ]
      },
      "execution_count": 1,
@@ -51,9 +51,10 @@
    "outputs": [],
    "source": [
     "# data (inputs)\n",
+    "\n",
     "# chosen_feature = ['std_deviation', 'count', 'sum_diff', 'range_value', 'abs_skewness']\n",
     "chosen_feature = ['count', 'sum_diff', 'range_value']\n",
-    "data = torch.FloatTensor(pd.read_csv('1_genome/1_training_data/seq_features.csv').iloc[:, 1:][chosen_feature].to_numpy())\n",
+    "data = torch.FloatTensor(pd.read_csv('1_training_data/seq_features.csv').iloc[:, 1:][chosen_feature].to_numpy())\n",
     "X = normalize_data(data)"
    ]
   },
@@ -64,21 +65,56 @@
    "outputs": [],
    "source": [
     "# data (targets)\n",
-    "target_df_1 = pd.read_csv('1_genome/1_training_data/target_lambda_fold1_base_e.csv')\n",
-    "target_df_2 = pd.read_csv('1_genome/1_training_data/target_lambda_fold2_base_e.csv')\n",
+    "target_df_1 = pd.read_csv('1_training_data/target_lambda_fold1_base_e.csv')\n",
+    "target_df_2 = pd.read_csv('1_training_data/target_lambda_fold2_base_e.csv')\n",
     "\n",
     "targets_low_1  = torch.FloatTensor(target_df_1.iloc[:, 1:2].to_numpy())\n",
     "targets_high_1 = torch.FloatTensor(target_df_1.iloc[:, 2:3].to_numpy())\n",
     "targets_low_2  = torch.FloatTensor(target_df_2.iloc[:, 1:2].to_numpy())\n",
     "targets_high_2 = torch.FloatTensor(target_df_2.iloc[:, 2:3].to_numpy())\n",
     "\n",
-    "y1 = torch.cat((targets_low_1, targets_high_1), dim=1)\n",
-    "y2 = torch.cat((targets_low_2, targets_high_2), dim=1)"
+    "y1_raw = torch.cat((targets_low_1, targets_high_1), dim=1)\n",
+    "y2_raw = torch.cat((targets_low_2, targets_high_2), dim=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter\n",
+    "idx_fold1 = [idx for idx, item in enumerate(y1_raw) if item[0] > -7 and item[1] < 7]\n",
+    "X1 = X[idx_fold1]\n",
+    "y1 = torch.mean(y1_raw[idx_fold1], axis=1).reshape(-1,1)\n",
+    "\n",
+    "idx_fold2 = [idx for idx, item in enumerate(y2_raw) if item[0] > -7 and item[1] < 7]\n",
+    "X2 = X[idx_fold2]\n",
+    "y2 = torch.mean(y2_raw[idx_fold2], axis=1).reshape(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "190 190\n",
+      "313 313\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(X1), len(y1))\n",
+    "print(len(X2), len(y2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,56 +148,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cv_learn(X, y1, y2, n_hiddens, layer_size):\n",
+    "def cv_learn(X1, X2, y1, y2, n_hiddens, layer_size):\n",
     "    # Define the number of folds for cross-validation\n",
     "    kf = KFold(n_splits=2, shuffle=True, random_state=123)\n",
     "\n",
     "    # loss function\n",
-    "    squared_hinge_loss = SquaredHingeLoss(margin=1, low_lim=-7, high_lim=7)\n",
+    "    loss_func = torch.nn.MSELoss()\n",
     "\n",
+    "    # learn best ite from fold 1\n",
     "    best_ites_1 = []\n",
-    "    best_ites_2 = []\n",
-    "    for train_index, val_index in kf.split(X):\n",
-    "\n",
+    "    for train_index, val_index in kf.split(X1):\n",
     "        # Split the data into training and validation sets\n",
-    "        X_train_tensor, X_val_tensor   = X[train_index],  X[val_index]\n",
+    "        X1_train_tensor, X1_val_tensor = X1[train_index], X1[val_index]\n",
     "        y1_train_tensor, y1_val_tensor = y1[train_index], y1[val_index]\n",
-    "        y2_train_tensor, y2_val_tensor = y2[train_index], y2[val_index]\n",
     "\n",
     "        # Define your model, loss, and optimizer\n",
-    "        model1 = MyModel(input_size=X_train_tensor.shape[1], hidden_layers=n_hiddens, hidden_size=layer_size)\n",
-    "        model2 = MyModel(input_size=X_train_tensor.shape[1], hidden_layers=n_hiddens, hidden_size=layer_size)\n",
-    "\n",
+    "        model1 = MyModel(input_size=X1_train_tensor.shape[1], hidden_layers=n_hiddens, hidden_size=layer_size)\n",
     "        optimizer1 = optim.Adam(model1.parameters(), lr=0.001)\n",
-    "        optimizer2 = optim.Adam(model2.parameters(), lr=0.001)\n",
     "\n",
     "        # Training loop for the specified number of iterations\n",
     "        val_losses_1 = []\n",
-    "        val_losses_2 = []\n",
     "        for _ in range(5000):\n",
-    "            loss1      = squared_hinge_loss(model1(X_train_tensor), y1_train_tensor)\n",
-    "            val_loss_1 = squared_hinge_loss(model1(X_val_tensor),   y1_val_tensor)\n",
+    "            loss1      = loss_func(model1(X1_train_tensor), y1_train_tensor)\n",
+    "            val_loss_1 = loss_func(model1(X1_val_tensor),   y1_val_tensor)\n",
     "            optimizer1.zero_grad()\n",
     "            loss1.backward()\n",
     "            optimizer1.step()\n",
     "\n",
-    "            loss2      = squared_hinge_loss(model2(X_train_tensor), y2_train_tensor)\n",
-    "            val_loss_2 = squared_hinge_loss(model2(X_val_tensor),   y2_val_tensor)\n",
+    "            val_losses_1.append(val_loss_1.item())\n",
+    "        \n",
+    "        best_ite_1 = np.argmin(val_losses_1) + 1\n",
+    "        best_ites_1.append(best_ite_1)\n",
+    "\n",
+    "    # learn best ite from fold 2\n",
+    "    best_ites_2 = []\n",
+    "    for train_index, val_index in kf.split(X2):\n",
+    "        # Split the data into training and validation sets\n",
+    "        X2_train_tensor, X2_val_tensor = X2[train_index], X2[val_index]\n",
+    "        y2_train_tensor, y2_val_tensor = y2[train_index], y2[val_index]\n",
+    "\n",
+    "        # Define your model, loss, and optimizer\n",
+    "        model2 = MyModel(input_size=X2_train_tensor.shape[1], hidden_layers=n_hiddens, hidden_size=layer_size)\n",
+    "        optimizer2 = optim.Adam(model2.parameters(), lr=0.001)\n",
+    "\n",
+    "        # Training loop for the specified number of iterations\n",
+    "        val_losses_2 = []\n",
+    "        for _ in range(5000):\n",
+    "            loss2      = loss_func(model2(X2_train_tensor), y2_train_tensor)\n",
+    "            val_loss_2 = loss_func(model2(X2_val_tensor),   y2_val_tensor)\n",
     "            optimizer2.zero_grad()\n",
     "            loss2.backward()\n",
     "            optimizer2.step()\n",
     "\n",
-    "            val_losses_1.append(val_loss_1.item())\n",
     "            val_losses_2.append(val_loss_2.item())\n",
     "        \n",
-    "        best_ite_1 = np.argmin(val_losses_1) + 1\n",
     "        best_ite_2 = np.argmin(val_losses_2) + 1\n",
-    "\n",
-    "        best_ites_1.append(best_ite_1)\n",
     "        best_ites_2.append(best_ite_2)\n",
     "\n",
     "    best_no_ite_1 = int(np.mean(best_ites_1))\n",
@@ -172,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_model(X, y, n_hiddens, layer_size, n_ites):\n",
     "    model = MyModel(input_size=X.shape[1], hidden_layers=n_hiddens, hidden_size=layer_size)\n",
-    "    # squared_hinge_loss = SquaredHingeLoss(margin=1, low_lim=-7, high_lim=7)\n",
-    "    squared_hinge_loss = SquaredHingeLoss(margin=0, low_lim=-7, high_lim=7)\n",
+    "    # loss_func = SquaredHingeLoss(margin=1, low_lim=-7, high_lim=7)\n",
+    "    loss_func = torch.nn.MSELoss()\n",
     "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "    # Training loop\n",
@@ -188,7 +233,7 @@
     "        outputs = model(X)\n",
     "        \n",
     "        # Compute the custom loss\n",
-    "        loss = squared_hinge_loss(outputs, y)\n",
+    "        loss = loss_func(outputs, y)\n",
     "        \n",
     "        # Backward pass and optimization\n",
     "        optimizer.zero_grad()\n",
@@ -200,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,14 +261,10 @@
     "        fold2_total_labels = len(neg_start_2) + len(pos_start_2)\n",
     "\n",
     "        # run each lambda and record it into csv file\n",
-    "        # row  = [seqs[i][0], ldas2[i], ldas1[i], list(y1[i].numpy()), list(y2[i].numpy()), fold1_total_labels, fold2_total_labels]\n",
-    "        row  = [seqs[i][0], ldas1[i], ldas2[i], list(y1[i].numpy()), list(y2[i].numpy()), fold1_total_labels, fold2_total_labels]\n",
+    "        row  = [seqs[i][0], ldas2[i], ldas1[i], list(y1_raw[i].numpy()), list(y2_raw[i].numpy()), fold1_total_labels, fold2_total_labels]\n",
     "\n",
-    "        # chpnt_fold1 = opart(np.exp(ldas2[i]), sequence)\n",
-    "        # chpnt_fold2 = opart(np.exp(ldas1[i]), sequence)\n",
-    "\n",
-    "        chpnt_fold1 = opart(np.exp(ldas1[i]), sequence)\n",
-    "        chpnt_fold2 = opart(np.exp(ldas2[i]), sequence)\n",
+    "        chpnt_fold1 = opart(np.exp(ldas2[i]), sequence)\n",
+    "        chpnt_fold2 = opart(np.exp(ldas1[i]), sequence)\n",
     "\n",
     "        err_1 = error_count(chpnt_fold1, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
     "        err_2 = error_count(chpnt_fold2, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
@@ -239,31 +280,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def try_model(X, y1, y2, config):\n",
+    "def try_model(X1, X2, y1, y2, config):\n",
     "    n_hiddens  = config['n_hiddens']\n",
     "    layer_size = config['layer_size']\n",
     "\n",
-    "    # best_no_ite_1, best_no_ite_2 = cv_learn(X, y1, y2, n_hiddens, layer_size)\n",
+    "    best_no_ite_1, best_no_ite_2 = cv_learn(X1, X2, y1, y2, n_hiddens, layer_size)\n",
     "\n",
-    "    # model1 = train_model(X, y1, n_hiddens, layer_size, best_no_ite_1)\n",
-    "    # model2 = train_model(X, y2, n_hiddens, layer_size, best_no_ite_2)\n",
+    "    model1 = train_model(X1, y1, n_hiddens, layer_size, best_no_ite_1)\n",
+    "    model2 = train_model(X2, y2, n_hiddens, layer_size, best_no_ite_2)\n",
     "\n",
-    "    model1 = train_model(X, y1, n_hiddens, layer_size, 5000)\n",
-    "    model2 = train_model(X, y2, n_hiddens, layer_size, 5000)\n",
-    "\n",
-    "    torch.save(model1.state_dict(), '1_genome/3_learned_models/2_deep/model1_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
-    "    torch.save(model2.state_dict(), '1_genome/3_learned_models/2_deep/model2_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
+    "    torch.save(model1.state_dict(), '3_learned_models/2_deep/model1_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
+    "    torch.save(model2.state_dict(), '3_learned_models/2_deep/model2_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
     "\n",
     "    with torch.no_grad():\n",
     "        ldas1 = model1(X).numpy().reshape(-1)\n",
     "        ldas2 = model2(X).numpy().reshape(-1)\n",
     "\n",
-    "    seqs   = gen_data_dict('1_genome/0_sequences_labels/signals.gz')\n",
-    "    labels = gen_data_dict('1_genome/0_sequences_labels/labels.gz')\n",
+    "    seqs   = gen_data_dict('0_sequences_labels/signals.gz')\n",
+    "    labels = gen_data_dict('0_sequences_labels/labels.gz')\n",
     "    df = get_df_stat(ldas1, ldas2, seqs, labels)\n",
     "\n",
     "    return df"
@@ -271,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,39 +323,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# choose best model\n",
-    "dfs = Parallel(n_jobs=32)(delayed(try_model)(X, y1, y2, configs[i]) for i in range(0, len(configs)))"
+    "dfs = Parallel(n_jobs=32)(delayed(try_model)(X1, X2, y1, y2, configs[i]) for i in range(0, len(configs)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_hiddens: 0 \t layer_size:  4 \t fold1.test: 73.14 \t fold2.test: 66.54 \t avg_acc: 69.84\n",
-      "n_hiddens: 0 \t layer_size:  8 \t fold1.test: 73.01 \t fold2.test: 66.54 \t avg_acc: 69.77\n",
-      "n_hiddens: 0 \t layer_size: 16 \t fold1.test: 73.14 \t fold2.test: 66.54 \t avg_acc: 69.84\n",
-      "n_hiddens: 0 \t layer_size: 32 \t fold1.test: 73.01 \t fold2.test: 66.54 \t avg_acc: 69.77\n",
-      "n_hiddens: 1 \t layer_size:  4 \t fold1.test: 73.01 \t fold2.test: 66.54 \t avg_acc: 69.77\n",
-      "n_hiddens: 1 \t layer_size:  8 \t fold1.test: 73.14 \t fold2.test: 66.54 \t avg_acc: 69.84\n",
-      "n_hiddens: 1 \t layer_size: 16 \t fold1.test: 73.01 \t fold2.test: 66.54 \t avg_acc: 69.77\n",
-      "n_hiddens: 1 \t layer_size: 32 \t fold1.test: 73.14 \t fold2.test: 66.54 \t avg_acc: 69.84\n",
-      "n_hiddens: 2 \t layer_size:  4 \t fold1.test: 73.14 \t fold2.test: 66.54 \t avg_acc: 69.84\n",
-      "n_hiddens: 2 \t layer_size:  8 \t fold1.test: 73.14 \t fold2.test: 66.54 \t avg_acc: 69.84\n",
-      "n_hiddens: 2 \t layer_size: 16 \t fold1.test: 73.01 \t fold2.test: 66.54 \t avg_acc: 69.77\n",
-      "n_hiddens: 2 \t layer_size: 32 \t fold1.test: 73.14 \t fold2.test: 66.54 \t avg_acc: 69.84\n",
-      "n_hiddens: 3 \t layer_size:  4 \t fold1.test: 73.14 \t fold2.test: 66.54 \t avg_acc: 69.84\n",
-      "n_hiddens: 3 \t layer_size:  8 \t fold1.test: 73.14 \t fold2.test: 66.54 \t avg_acc: 69.84\n",
-      "n_hiddens: 3 \t layer_size: 16 \t fold1.test: 73.14 \t fold2.test: 66.54 \t avg_acc: 69.84\n",
-      "n_hiddens: 3 \t layer_size: 32 \t fold1.test: 73.14 \t fold2.test: 66.54 \t avg_acc: 69.84\n"
+      "n_hiddens: 0 \t layer_size:  4 \t fold1.test: 78.86 \t fold2.test: 77.50 \t avg_acc: 78.18\n",
+      "n_hiddens: 0 \t layer_size:  8 \t fold1.test: 78.72 \t fold2.test: 76.15 \t avg_acc: 77.44\n",
+      "n_hiddens: 0 \t layer_size: 16 \t fold1.test: 79.26 \t fold2.test: 79.23 \t avg_acc: 79.24\n",
+      "n_hiddens: 0 \t layer_size: 32 \t fold1.test: 80.19 \t fold2.test: 80.77 \t avg_acc: 80.48\n",
+      "n_hiddens: 1 \t layer_size:  4 \t fold1.test: 77.39 \t fold2.test: 79.23 \t avg_acc: 78.31\n",
+      "n_hiddens: 1 \t layer_size:  8 \t fold1.test: 80.05 \t fold2.test: 80.38 \t avg_acc: 80.22\n",
+      "n_hiddens: 1 \t layer_size: 16 \t fold1.test: 80.98 \t fold2.test: 78.65 \t avg_acc: 79.82\n",
+      "n_hiddens: 1 \t layer_size: 32 \t fold1.test: 79.79 \t fold2.test: 80.19 \t avg_acc: 79.99\n",
+      "n_hiddens: 2 \t layer_size:  4 \t fold1.test: 81.12 \t fold2.test: 77.12 \t avg_acc: 79.12\n",
+      "n_hiddens: 2 \t layer_size:  8 \t fold1.test: 79.65 \t fold2.test: 76.54 \t avg_acc: 78.10\n",
+      "n_hiddens: 2 \t layer_size: 16 \t fold1.test: 78.19 \t fold2.test: 80.96 \t avg_acc: 79.58\n",
+      "n_hiddens: 2 \t layer_size: 32 \t fold1.test: 80.19 \t fold2.test: 80.38 \t avg_acc: 80.29\n",
+      "n_hiddens: 3 \t layer_size:  4 \t fold1.test: 81.12 \t fold2.test: 77.12 \t avg_acc: 79.12\n",
+      "n_hiddens: 3 \t layer_size:  8 \t fold1.test: 81.78 \t fold2.test: 77.50 \t avg_acc: 79.64\n",
+      "n_hiddens: 3 \t layer_size: 16 \t fold1.test: 80.32 \t fold2.test: 80.58 \t avg_acc: 80.45\n",
+      "n_hiddens: 3 \t layer_size: 32 \t fold1.test: 79.65 \t fold2.test: 79.62 \t avg_acc: 79.63\n"
      ]
     }
    ],
@@ -332,11 +370,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs[np.argmax(avg_acc)].to_csv('1_genome/2_learning_record/deep.csv', index=False)"
+    "df = dfs[np.argmax(avg_acc)]\n",
+    "df.to_csv('2_learning_record/deep.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80.18617021276596, 80.76923076923077, 752, 520, 149, 100)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_error_rate(df)"
    ]
   }
  ],
