--- a/1_genome/lambda_learning_BIC_same_as_paper.ipynb
+++ b/1_genome/lambda_learning_BIC_same_as_paper.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart"
+    "import pandas as pd\n",
+    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart, show_error_rate"
    ]
   },
   {
@@ -16,10 +17,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seqs   = gen_data_dict('sequence_label_data/genome/signals.gz')\n",
-    "labels = gen_data_dict('sequence_label_data/genome/labels.gz')\n",
+    "seqs   = gen_data_dict('0_sequences_labels/signals.gz')\n",
+    "labels = gen_data_dict('0_sequences_labels/labels.gz')\n",
     "\n",
-    "header = ['sequenceID', \"log_lambda\", 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_fp_errs', 'fold_1_fn_errs', 'fold_1_tp', 'fold_1_tn', 'fold_2_fp_errs', 'fold_2_fn_errs', 'fold_2_tp', 'fold_2_tn',]\n",
+    "header = ['sequenceID', 'log10_lambda', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_fp_errs', 'fold_1_fn_errs', 'fold_1_tp', 'fold_1_tn', 'fold_2_fp_errs', 'fold_2_fn_errs', 'fold_2_tp', 'fold_2_tn']\n",
+    "rows = []\n",
     "for i in range(len(seqs)):\n",
     "    # generate data\n",
     "    sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
@@ -39,16 +41,42 @@
     "    chpnt = opart(lda, sequence)\n",
     "    err_1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
     "    err_2 = error_count(chpnt, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
-    "    row.append(err_1[0])\n",
-    "    row.append(err_1[1])\n",
-    "    row.append(err_1[2])\n",
-    "    row.append(err_1[3])\n",
-    "    row.append(err_2[0])\n",
-    "    row.append(err_2[1])\n",
-    "    row.append(err_2[2])\n",
-    "    row.append(err_2[3])\n",
+    "    \n",
+    "    for err in [err_1, err_2]:\n",
+    "        row.extend(err[:4])\n",
     "\n",
-    "    write_to_csv('1.genome_learning_output/BIC_paper.csv', header, row)"
+    "    rows.append(row)\n",
+    "\n",
+    "df = pd.DataFrame(rows, columns=header)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('2_learning_record/BIC.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(72.87234042553192, 53.65384615384615, 752, 520, 204, 241)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_error_rate(df)"
    ]
   }
  ],
