--- a/1_genome/lambda_learning_linear_e_filter_MSE.ipynb
+++ b/1_genome/lambda_learning_linear_e_filter_MSE.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2d4ff6afcf0>"
+       "<torch._C.Generator at 0x226c64bb330>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,11 +313,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_df_stat(ldas1, ldas2, seqs, labels):\n",
+    "def get_df_stat(log_ldas1, log_ldas2, seqs, labels):\n",
     "    header = ['sequenceID', 'log_lambda_test_fold1', 'log_lambda_test_fold2', 'target_1', 'target_2', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_fp_errs', 'fold_1_fn_errs', 'fold_1_tp', 'fold_1_tn', 'fold_2_fp_errs', 'fold_2_fn_errs', 'fold_2_tp', 'fold_2_tn']\n",
     "    rows = []\n",
     "    for i in range(len(seqs)):\n",
@@ -329,10 +329,10 @@
     "        fold2_total_labels = len(neg_start_2) + len(pos_start_2)\n",
     "\n",
     "        # run each lambda and record it into csv file\n",
-    "        row  = [seqs[i][0], ldas2[i], ldas1[i], list(y1_raw[i].numpy()), list(y2_raw[i].numpy()), fold1_total_labels, fold2_total_labels]\n",
+    "        row  = [seqs[i][0], log_ldas2[i], log_ldas1[i], list(y1_raw[i].numpy()), list(y2_raw[i].numpy()), fold1_total_labels, fold2_total_labels]\n",
     "\n",
-    "        chpnt_fold1 = opart(np.exp(ldas2[i]), sequence)\n",
-    "        chpnt_fold2 = opart(np.exp(ldas1[i]), sequence)\n",
+    "        chpnt_fold1 = opart(np.exp(log_ldas2[i]), sequence)\n",
+    "        chpnt_fold2 = opart(np.exp(log_ldas1[i]), sequence)\n",
     "\n",
     "        err_1 = error_count(chpnt_fold1, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
     "        err_2 = error_count(chpnt_fold2, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,19 +362,19 @@
     "    torch.save(model2.state_dict(), '3_learned_models/1_linear/model2.pth')\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        ldas1 = model1(X).numpy().reshape(-1)\n",
-    "        ldas2 = model2(X).numpy().reshape(-1)\n",
+    "        log_ldas1 = model1(X).numpy().reshape(-1)\n",
+    "        log_ldas2 = model2(X).numpy().reshape(-1)\n",
     "\n",
     "    seqs   = gen_data_dict('0_sequences_labels/signals.gz')\n",
     "    labels = gen_data_dict('0_sequences_labels/labels.gz')\n",
-    "    df = get_df_stat(ldas1, ldas2, seqs, labels)\n",
+    "    df = get_df_stat(log_ldas1, log_ldas2, seqs, labels)\n",
     "\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,16 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('2_learning_record/linear.csv', index=False)"
+    "df.to_csv('2_learning_record/1_base_e/linear_filter_exactlambda_MSE.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -401,19 +401,19 @@
        "(76.59574468085107, 71.15384615384616, 752, 520, 176, 150)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('2_learning_record/linear.csv')\n",
+    "df = pd.read_csv('2_learning_record/1_base_e/linear_filter_exactlambda_MSE.csv')\n",
     "show_error_rate(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
