--- a/1_genome/utility_functions.ipynb
+++ b/1_genome/utility_functions.ipynb
@@ -491,20 +491,33 @@
    "outputs": [],
    "source": [
     "# Custom loss function\n",
+    "# class SquaredHingeLoss(nn.Module):\n",
+    "#     def __init__(self, margin=1, low_lim=-7, high_lim=7):\n",
+    "#         super(SquaredHingeLoss, self).__init__()\n",
+    "#         self.margin = margin\n",
+    "#         self.low_lim  = low_lim\n",
+    "#         self.high_lim = high_lim\n",
+    "\n",
+    "#     def forward(self, predicted, y):\n",
+    "#         low, high = y[:, 0], y[:, 1]\n",
+    "#         margin = self.margin\n",
+    "#         loss_low = torch.relu(low - predicted + margin) * torch.sign(low - self.low_lim)\n",
+    "#         loss_high = torch.relu(predicted - high + margin) * torch.sign(self.high_lim - high)\n",
+    "#         loss = loss_low + loss_high\n",
+    "#         return torch.mean(torch.square(loss), dtype=torch.float)\n",
+    "\n",
     "class SquaredHingeLoss(nn.Module):\n",
-    "    def __init__(self, margin=1, low_lim=-7, high_lim=7):\n",
+    "    def __init__(self, margin=1):\n",
     "        super(SquaredHingeLoss, self).__init__()\n",
     "        self.margin = margin\n",
-    "        self.low_lim  = low_lim\n",
-    "        self.high_lim = high_lim\n",
     "\n",
     "    def forward(self, predicted, y):\n",
     "        low, high = y[:, 0], y[:, 1]\n",
     "        margin = self.margin\n",
-    "        loss_low = torch.relu(low - predicted + margin) * torch.sign(low - self.low_lim)\n",
-    "        loss_high = torch.relu(predicted - high + margin) * torch.sign(self.high_lim - high)\n",
+    "        loss_low = torch.relu(low - predicted + margin)\n",
+    "        loss_high = torch.relu(predicted - high + margin)\n",
     "        loss = loss_low + loss_high\n",
-    "        return torch.mean(torch.square(loss), dtype=torch.float)"
+    "        return torch.mean(torch.square(loss))"
    ]
   },
   {
