--- a/1_genome/generate_learning_target.ipynb
+++ b/1_genome/generate_learning_target.ipynb
@@ -17,8 +17,8 @@
    "outputs": [],
    "source": [
     "# Read the CSV file into a DataFrame\n",
-    "df_1 = pd.read_csv('1_genome/1_training_data/errors_fold1_base_e.csv')\n",
-    "df_2 = pd.read_csv('1_genome/1_training_data/errors_fold2_base_e.csv')"
+    "df_1 = pd.read_csv('1_training_data/errors_fold1_base_10.csv')\n",
+    "df_2 = pd.read_csv('1_training_data/errors_fold2_base_10.csv')"
    ]
   },
   {
@@ -46,6 +46,10 @@
     "for index, row in df_1.iterrows():\n",
     "    min_value_col_start = row.iloc[1:].idxmin()\n",
     "    min_value_col_end = row.iloc[1:][::-1].idxmin()\n",
+    "    if(min_value_col_start == '-5'):\n",
+    "        min_value_col_start = '-inf'\n",
+    "    if(min_value_col_end == '5'):\n",
+    "        min_value_col_end = 'inf'\n",
     "    rows.append({'sequenceID': row['sequenceID'], \n",
     "                 'small_end': min_value_col_start, \n",
     "                 'big_end': min_value_col_end})\n",
@@ -57,6 +61,10 @@
     "for index, row in df_2.iterrows():\n",
     "    min_value_col_start = row.iloc[1:].idxmin()\n",
     "    min_value_col_end = row.iloc[1:][::-1].idxmin()\n",
+    "    if(min_value_col_start == '-5'):\n",
+    "        min_value_col_start = '-inf'\n",
+    "    if(min_value_col_end == '5'):\n",
+    "        min_value_col_end = 'inf'\n",
     "    rows.append({'sequenceID': row['sequenceID'], \n",
     "                 'small_end': min_value_col_start, \n",
     "                 'big_end': min_value_col_end})\n",
@@ -68,6 +76,10 @@
     "for index, row in df_3.iterrows():\n",
     "    min_value_col_start = row.iloc[1:].idxmin()\n",
     "    min_value_col_end = row.iloc[1:][::-1].idxmin()\n",
+    "    if(min_value_col_start == '-5'):\n",
+    "        min_value_col_start = '-inf'\n",
+    "    if(min_value_col_end == '5'):\n",
+    "        min_value_col_end = 'inf'\n",
     "    rows.append({'sequenceID': row['sequenceID'], \n",
     "                 'small_end': min_value_col_start, \n",
     "                 'big_end': min_value_col_end})\n",
@@ -81,9 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_target_1.to_csv('1_genome/1_training_data/target_lambda_fold1_base_e.csv', index=False)\n",
-    "df_target_2.to_csv('1_genome/1_training_data/target_lambda_fold2_base_e.csv', index=False)\n",
-    "df_target_3.to_csv('1_genome/1_training_data/target_lambda_bothfold_base_e.csv', index=False)"
+    "df_target_1.to_csv('1_training_data/target_lambda_fold1_base_10.csv', index=False)\n",
+    "df_target_2.to_csv('1_training_data/target_lambda_fold2_base_10.csv', index=False)\n",
+    "df_target_3.to_csv('1_training_data/target_lambda_bothfold_base_10.csv', index=False)"
    ]
   }
  ],
