--- a/1_genome/lambda_learning_constant_same_as_paper.ipynb
+++ b/1_genome/lambda_learning_constant_same_as_paper.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
    ],
    "source": [
     "# Test fold 2\n",
-    "random.seed(1524)\n",
+    "# random.seed(1524)\n",
     "\n",
     "total_error = 0\n",
     "for i in range(len(seqs)):\n",
@@ -73,21 +73,22 @@
     "    for j in range(len(list_of_log_lambda)):\n",
     "        errors.append(error_fold2_df.iloc[i][str(list_of_log_lambda[j])])\n",
     "\n",
-    "    total_error += random.choice(errors)\n",
+    "    # total_error += random.choice(errors)\n",
+    "    total_error += errors[int(len(errors)/2)]\n",
     "\n",
     "print(total_error)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "259\n"
+      "200\n"
      ]
     }
    ],
@@ -107,7 +108,7 @@
     "    for j in range(len(list_of_log_lambda)):\n",
     "        errors.append(error_fold1_df.iloc[i][str(list_of_log_lambda[j])])\n",
     "\n",
-    "    total_error += errors[int(len(errors)/2-0.5)]\n",
+    "    total_error += errors[int(len(errors)/2)]\n",
     "\n",
     "print(total_error)"
    ]
@@ -129,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
