--- a/1_genome/lambda_learning_DeepLearning.ipynb
+++ b/1_genome/lambda_learning_DeepLearning.ipynb
@@ -186,7 +186,7 @@
     "\n",
     "    # learn best ite\n",
     "    best_ites = []\n",
-    "    for train_index, val_index in kf.split(X1):\n",
+    "    for train_index, val_index in kf.split(X):\n",
     "        # Split the data into training and validation sets\n",
     "        X_train_tensor, X_val_tensor = X[train_index], X[val_index]\n",
     "        y_train_tensor, y_val_tensor = y[train_index], y[val_index]\n",
@@ -208,8 +208,8 @@
     "            train_losses.append(loss1.item())\n",
     "            val_losses.append(val_loss_1.item())\n",
     "        \n",
-    "        best_ite_1 = np.argmin(val_losses) + 1\n",
-    "        best_ites.append(best_ite_1)\n",
+    "        best_ite = np.argmin(val_losses) + 1\n",
+    "        best_ites.append(best_ite)\n",
     "\n",
     "        # plot\n",
     "        plot_loss(train_losses, val_losses, train_set='subtrain', test_set='val')\n",
@@ -527,7 +527,7 @@
    "outputs": [],
    "source": [
     "df = dfs[np.argmax(avg_acc)]\n",
-    "# df.to_csv('2_learning_record/deep.csv', index=False)"
+    "df.to_csv('2_learning_record/deep.csv', index=False)"
    ]
   },
   {
