--- a/1_genome/lambda_learning_RNN_test_2.ipynb
+++ b/1_genome/lambda_learning_RNN_test_2.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x181a76afd30>"
+       "<torch._C.Generator at 0x1f8c30ffd30>"
       ]
      },
      "execution_count": 1,
@@ -44,7 +44,7 @@
     "lengths = []\n",
     "for i in range(len(seqs)):\n",
     "    lengths.append(len(seqs[i][1]))\n",
-    "indices = [i for i, item in enumerate(lengths) if item < 400]\n",
+    "indices = [i for i, item in enumerate(lengths) if item < 200]\n",
     "selected_seqs = [seqs[i] for i in indices]\n",
     "\n",
     "# target\n",
@@ -90,8 +90,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "84 174\n",
-      "84 174\n"
+      "56 121\n",
+      "56 121\n"
      ]
     }
    ],
@@ -193,7 +193,7 @@
     "        # Training loop for the specified number of iterations\n",
     "        train_losses = []\n",
     "        val_losses = []\n",
-    "        for i in range(50):\n",
+    "        for i in range(30):\n",
     "            loss_sum = 0.0\n",
     "            val_loss_sum = 0.0\n",
     "            for j in range(len(X_train_tensor)):\n",
@@ -220,8 +220,8 @@
     "        best_ite = np.argmin(val_losses) + 1\n",
     "        best_ites.append(best_ite)\n",
     "\n",
-    "        # # plot\n",
-    "        # plot_loss(train_losses, val_losses, train_set_name='subtrain', test_set_name='val')\n",
+    "        # plot\n",
+    "        plot_loss(train_losses, val_losses, train_set_name='subtrain', test_set_name='val')\n",
     "\n",
     "    best_no_ite = int(np.mean(best_ites))\n",
     "    \n",
@@ -301,15 +301,11 @@
     "    best_no_ite_1 = cv_learn(X1, y1, n_features, n_hiddens, layer_size)\n",
     "    best_no_ite_2 = cv_learn(X2, y2, n_features, n_hiddens, layer_size)\n",
     "\n",
-    "    print(\"done 1\")\n",
-    "\n",
     "    model1 = train_model(X1, y1, n_features, n_hiddens, layer_size, best_no_ite_1)\n",
     "    model2 = train_model(X2, y2, n_features, n_hiddens, layer_size, best_no_ite_2)\n",
     "\n",
-    "    print(\"done 2\")\n",
-    "\n",
-    "    torch.save(model1.state_dict(), '3_learned_models/3_rnn/model1_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
-    "    torch.save(model2.state_dict(), '3_learned_models/3_rnn/model2_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
+    "    # torch.save(model1.state_dict(), '3_learned_models/3_rnn/model1_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
+    "    # torch.save(model2.state_dict(), '3_learned_models/3_rnn/model2_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
     "\n",
     "    ldas1 = np.zeros(len(seqs))\n",
     "    ldas2 = np.zeros(len(seqs))\n",
@@ -318,9 +314,7 @@
     "            seq = torch.tensor(seqs[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1,1)\n",
     "            ldas1[i] = model1(seq).numpy()[0][0]\n",
     "            ldas2[i] = model2(seq).numpy()[0][0]\n",
-    "    \n",
-    "    print(\"done 3\")\n",
-    "    \n",
+    "\n",
     "    seqs   = gen_data_dict('0_sequences_labels/signals.gz')\n",
     "    labels = gen_data_dict('0_sequences_labels/labels.gz')\n",
     "    df = get_df_stat(ldas1, ldas2, seqs, labels)\n",
@@ -335,7 +329,7 @@
    "outputs": [],
    "source": [
     "# Define the values for n_features, n_hiddens and layer_size\n",
-    "n_features        = [8, 16]\n",
+    "n_features        = [4, 8, 16]\n",
     "n_hiddens_values  = [0, 1, 2, 3]\n",
     "layer_size_values = [4, 8, 16, 32]\n",
     "\n",
@@ -354,21 +348,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dfs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m avg_acc \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43mdfs\u001b[49m)):\n\u001b[0;32m      3\u001b[0m     rate1, rate2,_,_,_,_ \u001b[38;5;241m=\u001b[39m show_error_rate(dfs[i])\n\u001b[0;32m      4\u001b[0m     avg_acc\u001b[38;5;241m.\u001b[39mappend((rate1 \u001b[38;5;241m+\u001b[39m rate2)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'dfs' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "avg_acc = []\n",
     "for i in range(len(dfs)):\n",
