--- a/1_genome/lambda_learning_RNN_test_1.ipynb
+++ b/1_genome/lambda_learning_RNN_test_1.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x181a76afd30>"
+       "<torch._C.Generator at 0x228bc2afd30>"
       ]
      },
      "execution_count": 1,
@@ -44,7 +44,7 @@
     "lengths = []\n",
     "for i in range(len(seqs)):\n",
     "    lengths.append(len(seqs[i][1]))\n",
-    "indices = [i for i, item in enumerate(lengths) if item < 400]\n",
+    "indices = [i for i, item in enumerate(lengths) if item < 100]\n",
     "selected_seqs = [seqs[i] for i in indices]\n",
     "\n",
     "# target\n",
@@ -90,8 +90,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "84 174\n",
-      "84 174\n"
+      "16 29\n",
+      "16 29\n"
      ]
     }
    ],
@@ -193,7 +193,7 @@
     "        # Training loop for the specified number of iterations\n",
     "        train_losses = []\n",
     "        val_losses = []\n",
-    "        for i in range(50):\n",
+    "        for i in range(30):\n",
     "            loss_sum = 0.0\n",
     "            val_loss_sum = 0.0\n",
     "            for j in range(len(X_train_tensor)):\n",
@@ -220,8 +220,8 @@
     "        best_ite = np.argmin(val_losses) + 1\n",
     "        best_ites.append(best_ite)\n",
     "\n",
-    "        # # plot\n",
-    "        # plot_loss(train_losses, val_losses, train_set_name='subtrain', test_set_name='val')\n",
+    "        # plot\n",
+    "        plot_loss(train_losses, val_losses, train_set_name='subtrain', test_set_name='val')\n",
     "\n",
     "    best_no_ite = int(np.mean(best_ites))\n",
     "    \n",
@@ -301,15 +301,11 @@
     "    best_no_ite_1 = cv_learn(X1, y1, n_features, n_hiddens, layer_size)\n",
     "    best_no_ite_2 = cv_learn(X2, y2, n_features, n_hiddens, layer_size)\n",
     "\n",
-    "    print(\"done 1\")\n",
-    "\n",
     "    model1 = train_model(X1, y1, n_features, n_hiddens, layer_size, best_no_ite_1)\n",
     "    model2 = train_model(X2, y2, n_features, n_hiddens, layer_size, best_no_ite_2)\n",
     "\n",
-    "    print(\"done 2\")\n",
-    "\n",
-    "    torch.save(model1.state_dict(), '3_learned_models/3_rnn/model1_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
-    "    torch.save(model2.state_dict(), '3_learned_models/3_rnn/model2_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
+    "    # torch.save(model1.state_dict(), '3_learned_models/3_rnn/model1_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
+    "    # torch.save(model2.state_dict(), '3_learned_models/3_rnn/model2_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
     "\n",
     "    ldas1 = np.zeros(len(seqs))\n",
     "    ldas2 = np.zeros(len(seqs))\n",
@@ -318,9 +314,7 @@
     "            seq = torch.tensor(seqs[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1,1)\n",
     "            ldas1[i] = model1(seq).numpy()[0][0]\n",
     "            ldas2[i] = model2(seq).numpy()[0][0]\n",
-    "    \n",
-    "    print(\"done 3\")\n",
-    "    \n",
+    "\n",
     "    seqs   = gen_data_dict('0_sequences_labels/signals.gz')\n",
     "    labels = gen_data_dict('0_sequences_labels/labels.gz')\n",
     "    df = get_df_stat(ldas1, ldas2, seqs, labels)\n",
@@ -335,7 +329,7 @@
    "outputs": [],
    "source": [
     "# Define the values for n_features, n_hiddens and layer_size\n",
-    "n_features        = [8, 16]\n",
+    "n_features        = [4, 8, 16]\n",
     "n_hiddens_values  = [0, 1, 2, 3]\n",
     "layer_size_values = [4, 8, 16, 32]\n",
     "\n",
@@ -354,18 +348,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'dfs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m avg_acc \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43mdfs\u001b[49m)):\n\u001b[0;32m      3\u001b[0m     rate1, rate2,_,_,_,_ \u001b[38;5;241m=\u001b[39m show_error_rate(dfs[i])\n\u001b[0;32m      4\u001b[0m     avg_acc\u001b[38;5;241m.\u001b[39mappend((rate1 \u001b[38;5;241m+\u001b[39m rate2)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'dfs' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_features:  4 \t n_hiddens: 0 \t layer_size:  4 \t fold1.test: 67.02 \t fold2.test: 75.38 \t avg_acc: 71.20\n",
+      "n_features:  4 \t n_hiddens: 0 \t layer_size:  8 \t fold1.test: 67.42 \t fold2.test: 69.42 \t avg_acc: 68.42\n",
+      "n_features:  4 \t n_hiddens: 0 \t layer_size: 16 \t fold1.test: 67.69 \t fold2.test: 69.42 \t avg_acc: 68.55\n",
+      "n_features:  4 \t n_hiddens: 0 \t layer_size: 32 \t fold1.test: 67.82 \t fold2.test: 69.23 \t avg_acc: 68.52\n",
+      "n_features:  4 \t n_hiddens: 1 \t layer_size:  4 \t fold1.test: 73.14 \t fold2.test: 69.42 \t avg_acc: 71.28\n",
+      "n_features:  4 \t n_hiddens: 1 \t layer_size:  8 \t fold1.test: 68.88 \t fold2.test: 69.42 \t avg_acc: 69.15\n",
+      "n_features:  4 \t n_hiddens: 1 \t layer_size: 16 \t fold1.test: 67.82 \t fold2.test: 69.23 \t avg_acc: 68.52\n",
+      "n_features:  4 \t n_hiddens: 1 \t layer_size: 32 \t fold1.test: 67.82 \t fold2.test: 68.46 \t avg_acc: 68.14\n",
+      "n_features:  4 \t n_hiddens: 2 \t layer_size:  4 \t fold1.test: 67.82 \t fold2.test: 69.42 \t avg_acc: 68.62\n",
+      "n_features:  4 \t n_hiddens: 2 \t layer_size:  8 \t fold1.test: 67.82 \t fold2.test: 69.62 \t avg_acc: 68.72\n",
+      "n_features:  4 \t n_hiddens: 2 \t layer_size: 16 \t fold1.test: 67.55 \t fold2.test: 69.62 \t avg_acc: 68.58\n",
+      "n_features:  4 \t n_hiddens: 2 \t layer_size: 32 \t fold1.test: 67.82 \t fold2.test: 69.42 \t avg_acc: 68.62\n",
+      "n_features:  4 \t n_hiddens: 3 \t layer_size:  4 \t fold1.test: 72.21 \t fold2.test: 69.62 \t avg_acc: 70.91\n",
+      "n_features:  4 \t n_hiddens: 3 \t layer_size:  8 \t fold1.test: 67.82 \t fold2.test: 70.77 \t avg_acc: 69.29\n",
+      "n_features:  4 \t n_hiddens: 3 \t layer_size: 16 \t fold1.test: 67.82 \t fold2.test: 68.85 \t avg_acc: 68.33\n",
+      "n_features:  4 \t n_hiddens: 3 \t layer_size: 32 \t fold1.test: 67.95 \t fold2.test: 69.62 \t avg_acc: 68.78\n",
+      "n_features:  8 \t n_hiddens: 0 \t layer_size:  4 \t fold1.test: 67.55 \t fold2.test: 69.23 \t avg_acc: 68.39\n",
+      "n_features:  8 \t n_hiddens: 0 \t layer_size:  8 \t fold1.test: 68.09 \t fold2.test: 69.62 \t avg_acc: 68.85\n",
+      "n_features:  8 \t n_hiddens: 0 \t layer_size: 16 \t fold1.test: 67.15 \t fold2.test: 69.62 \t avg_acc: 68.38\n",
+      "n_features:  8 \t n_hiddens: 0 \t layer_size: 32 \t fold1.test: 67.42 \t fold2.test: 69.62 \t avg_acc: 68.52\n",
+      "n_features:  8 \t n_hiddens: 1 \t layer_size:  4 \t fold1.test: 67.69 \t fold2.test: 68.46 \t avg_acc: 68.07\n",
+      "n_features:  8 \t n_hiddens: 1 \t layer_size:  8 \t fold1.test: 67.82 \t fold2.test: 69.23 \t avg_acc: 68.52\n",
+      "n_features:  8 \t n_hiddens: 1 \t layer_size: 16 \t fold1.test: 67.29 \t fold2.test: 69.62 \t avg_acc: 68.45\n",
+      "n_features:  8 \t n_hiddens: 1 \t layer_size: 32 \t fold1.test: 67.82 \t fold2.test: 68.46 \t avg_acc: 68.14\n",
+      "n_features:  8 \t n_hiddens: 2 \t layer_size:  4 \t fold1.test: 68.88 \t fold2.test: 70.00 \t avg_acc: 69.44\n",
+      "n_features:  8 \t n_hiddens: 2 \t layer_size:  8 \t fold1.test: 67.82 \t fold2.test: 69.62 \t avg_acc: 68.72\n",
+      "n_features:  8 \t n_hiddens: 2 \t layer_size: 16 \t fold1.test: 67.82 \t fold2.test: 69.62 \t avg_acc: 68.72\n",
+      "n_features:  8 \t n_hiddens: 2 \t layer_size: 32 \t fold1.test: 68.09 \t fold2.test: 70.19 \t avg_acc: 69.14\n",
+      "n_features:  8 \t n_hiddens: 3 \t layer_size:  4 \t fold1.test: 67.82 \t fold2.test: 70.00 \t avg_acc: 68.91\n",
+      "n_features:  8 \t n_hiddens: 3 \t layer_size:  8 \t fold1.test: 67.82 \t fold2.test: 69.62 \t avg_acc: 68.72\n",
+      "n_features:  8 \t n_hiddens: 3 \t layer_size: 16 \t fold1.test: 67.82 \t fold2.test: 69.62 \t avg_acc: 68.72\n",
+      "n_features:  8 \t n_hiddens: 3 \t layer_size: 32 \t fold1.test: 68.22 \t fold2.test: 69.62 \t avg_acc: 68.92\n",
+      "n_features: 16 \t n_hiddens: 0 \t layer_size:  4 \t fold1.test: 67.82 \t fold2.test: 70.00 \t avg_acc: 68.91\n",
+      "n_features: 16 \t n_hiddens: 0 \t layer_size:  8 \t fold1.test: 67.42 \t fold2.test: 69.42 \t avg_acc: 68.42\n",
+      "n_features: 16 \t n_hiddens: 0 \t layer_size: 16 \t fold1.test: 67.69 \t fold2.test: 69.62 \t avg_acc: 68.65\n",
+      "n_features: 16 \t n_hiddens: 0 \t layer_size: 32 \t fold1.test: 67.95 \t fold2.test: 69.04 \t avg_acc: 68.50\n",
+      "n_features: 16 \t n_hiddens: 1 \t layer_size:  4 \t fold1.test: 73.14 \t fold2.test: 76.15 \t avg_acc: 74.65\n",
+      "n_features: 16 \t n_hiddens: 1 \t layer_size:  8 \t fold1.test: 74.07 \t fold2.test: 69.81 \t avg_acc: 71.94\n",
+      "n_features: 16 \t n_hiddens: 1 \t layer_size: 16 \t fold1.test: 67.82 \t fold2.test: 69.42 \t avg_acc: 68.62\n",
+      "n_features: 16 \t n_hiddens: 1 \t layer_size: 32 \t fold1.test: 68.09 \t fold2.test: 70.19 \t avg_acc: 69.14\n",
+      "n_features: 16 \t n_hiddens: 2 \t layer_size:  4 \t fold1.test: 69.41 \t fold2.test: 73.27 \t avg_acc: 71.34\n",
+      "n_features: 16 \t n_hiddens: 2 \t layer_size:  8 \t fold1.test: 67.82 \t fold2.test: 69.62 \t avg_acc: 68.72\n",
+      "n_features: 16 \t n_hiddens: 2 \t layer_size: 16 \t fold1.test: 67.95 \t fold2.test: 69.62 \t avg_acc: 68.78\n",
+      "n_features: 16 \t n_hiddens: 2 \t layer_size: 32 \t fold1.test: 68.22 \t fold2.test: 69.81 \t avg_acc: 69.01\n",
+      "n_features: 16 \t n_hiddens: 3 \t layer_size:  4 \t fold1.test: 67.82 \t fold2.test: 78.08 \t avg_acc: 72.95\n",
+      "n_features: 16 \t n_hiddens: 3 \t layer_size:  8 \t fold1.test: 67.82 \t fold2.test: 69.62 \t avg_acc: 68.72\n",
+      "n_features: 16 \t n_hiddens: 3 \t layer_size: 16 \t fold1.test: 67.95 \t fold2.test: 69.62 \t avg_acc: 68.78\n",
+      "n_features: 16 \t n_hiddens: 3 \t layer_size: 32 \t fold1.test: 68.09 \t fold2.test: 70.00 \t avg_acc: 69.04\n"
      ]
     }
    ],
@@ -380,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
